--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -796,6 +796,21 @@ register.submit            = Register
 register.title             = Title
 register.title.invalid     = Please select a title
 
+register.shipAddress.invalid				=Please enter a shipping address
+register.shipAddress.countryIso.invalid		=Please select a country
+register.shipAddress.regionIso.invalid		=Please select a region
+register.shipAddress.townCity.invalid		=Please enter a detailed address information
+register.contactAddress.invalid				=Please enter a contact address
+register.contactAddress.countryIso.invalid	=Please select a country
+register.contactAddress.regionIso.invalid	=Please select a region
+register.contactAddress.townCity.invalid	=Please enter a detailed address information
+register.currency.invalid					=Please select a currency
+register.language.invalid					=Please select a language
+register.telephone.invalid					=Please enter a telephone number
+register.mobileNumber.invalid				=Please enter a mobile number
+register.contacts.invalid					=Please enter a contact
+register.fail								=Registration failed, please try again
+
 registration.confirmation.message.subtitle = Please check your email to verify your email address.
 registration.confirmation.message.title    = Thank you for registering.
 registration.error.account.exists.subtitle = If you forgot your password, please use the Forgotten Password link.
