--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -796,6 +796,21 @@ register.submit=注册
 register.title=标题
 register.title.invalid=请选择称呼
 
+register.shipAddress.invalid=\u8BF7\u586B\u5199\u6536\u83B7\u5730\u5740
+register.shipAddress.countryIso.invalid=\u8BF7\u9009\u62E9\u56FD\u5BB6
+register.shipAddress.regionIso.invalid=\u8BF7\u9009\u62E9\u7701\u5E02
+register.shipAddress.townCity.invalid=\u8BF7\u586B\u5199\u8BE6\u7EC6\u5730\u5740
+register.contactAddress.invalid=\u8BF7\u586B\u5199\u8054\u7CFB\u5730\u5740
+register.contactAddress.countryIso.invalid=\u8BF7\u9009\u62E9\u56FD\u5BB6
+register.contactAddress.regionIso.invalid=\u8BF7\u9009\u62E9\u7701\u5E02
+register.contactAddress.townCity.invalid=\u8BF7\u586B\u5199\u8BE6\u7EC6\u5730\u5740
+register.currency.invalid=\u8BF7\u9009\u62E9\u5E01\u79CD
+register.language.invalid=\u8BF7\u9009\u62E9\u8BED\u97F3
+register.telephone.invalid=\u8BF7\u586B\u5199\u7535\u8BDD\u53F7\u7801
+register.mobileNumber.invalid=\u8BF7\u586B\u5199\u624B\u673A\u53F7\u7801
+register.contacts.invalid=\u8BF7\u586B\u5199\u8054\u7CFB\u4EBA\u540D\u5B57
+register.fail=\u6CE8\u518C\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5
+
 registration.confirmation.message.subtitle=请查看电子邮件以验证您的电子邮件地址.
 registration.confirmation.message.title=感谢您的注册.
 registration.error.account.exists.subtitle=如果忘记密码，请使用“忘记密码”链接.
