alice add personalInfo

--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -531,6 +531,7 @@ forgottenPwd.title         = Reset Password
 form.field.required = Required
 form.global.error   = Please correct the errors below.
 form.select.empty   = Please select
+form.global.success = Successfully modified
 
 general.continue.shopping  = Continue Shopping
 general.find.a.store       = Find a Store
