--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -27,6 +27,12 @@ account.error.account.exists.with.email.address.title    = An account already ex
 account.error.account.not.found                          = No account was found for the email address provided.
 account.error.login.please                               = You must login to access this page. Please log in with your credentials below.
 
+addSupportTicket.email.invalid				=Please check your email to verify your email address.
+addSupportTicket.yourname.invalid			=Please enter your name
+addSupportTicket.message.invalid			=Please enter a subject
+addSupportTicket.telephone.invalid			=Please enter a telephone number
+addSupportTicket.address.invalid			=Please enter a address
+
 address.building                = Building Name or Number
 address.building_and_room       = Building Name and Room Number
 address.country                 = Country
