--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1497,3 +1497,9 @@ text.quote.dateformat.datepicker.selection.hint=mm/dd/yyyy
 
 text.quote.previous.estimated.total.display=Previous Estimated Total
 text.account.configuration.display=View Configuration
+
+basket.error.storeId.empty= StoreId is null
+
+basket.error.storeId.different=StoreId is different with others.
+
+basket.error.product.stock.different=Stock's type is not same.
