修订emailcontext和vm以及message的配置文件

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh_TW.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh_TW.properties
@@ -23,6 +23,7 @@ instructionsAccountUrl=若要存取您的帳戶，請按一下此處：{0}我的
 instructionsForgottenPswdUrl=如果忘記密碼，您可以隨時按一下此連結以重設：{0}更新我的密碼{1}
 instructionsContactUs=如需任何查詢幫助，請查看我們的 {0}常見問題頁面{1}、使用 {2}聯絡我們{3} 頁面、或直接致電 +44 (0)20 / 7429 4175 聯絡客服團隊或寄送電子郵件至 {4}。
 instructionsContactUs_electronics=如需任何查詢幫助，請使用我們的 {0}聯絡我們{1} 頁面，或直接致電　+44 (0)20 / 7429 4175 聯絡客服團隊或寄送電子郵件至 {2}。
+instructionsContactUs_acerchem=如需任何查詢幫助，請使用我們的 {0}聯絡我們{1} 頁面，或直接致電　+44 (0)20 / 7429 4175 聯絡客服團隊或寄送電子郵件至 {2}。
 complimentaryClosing=非常感謝
 signature=客戶服務
 help=幫助
