--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_de.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_de.properties
@@ -23,6 +23,7 @@ instructionsAccountUrl=Um auf Ihr Konto zuzugreifen, klicken Sie hier: {0}Mein K
 instructionsForgottenPswdUrl=Wenn Sie Ihr Kennwort vergessen haben, können Sie es jederzeit über den folgenden Link zurücksetzen: {0}Mein Kennwort aktualisieren{1}
 instructionsContactUs=Wenn Sie Fragen haben, nutzen Sie bitte unsere Seite mit den {0}FAQs{1} oder unsere {2}Kontakt{3}-Seite oder wenden Sie sich telefonisch unter +44 (0)20 / 7429 4175 oder per E-Mail {4} direkt an unseren Kundendienst.
 instructionsContactUs_electronics=Wenn Sie Fragen haben, nutzen Sie bitte entweder unsere {0}Kontakt-Seite{1} oder wenden Sie sich telefonisch unter +44 (0)20 / 7429 4175 oder per E-Mail {2} direkt an unseren Kundendienst.
+instructionsContactUs_acerchem=Wenn Sie Fragen haben, nutzen Sie bitte entweder unsere {0}Kontakt-Seite{1} oder wenden Sie sich telefonisch unter +44 (0)20 / 7429 4175 oder per E-Mail {2} direkt an unseren Kundendienst.
 complimentaryClosing=Vielen Dank
 signature=Kundendienst
 help=Hilfe
