--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -23,6 +23,7 @@ instructionsAccountUrl=要访问您的帐户，请单击此处: {0}我的帐户{
 instructionsForgottenPswdUrl=如果忘记了密码，可以随时单击以下链接进行重置: {0}更新我的密码{1}
 instructionsContactUs=如需任何查询帮助，请查看我们的{0}常见问题解答页面{1}、使用{2}联系我们{3}页面、或直接致电 +44 (0)20 / 7429 4175 联系客服团队或发送电子邮件至 {4}.
 instructionsContactUs_electronics=如需任何查询帮助，请使用我们的{0}联系我们{1}页面、或直接致电 +44 (0)20 / 7429 4175 联系客服团队或发送电子邮件至 {2}.
+instructionsContactUs_acerchem=如需任何查询帮助，请使用我们的{0}联系我们{1}页面、或直接致电 +44 (0)20 / 7429 4175 联系客服团队或发送电子邮件至 {2}.
 complimentaryClosing=非常感谢
 signature=客户服务
 help=帮助
