modify product detail page and order page bug

--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1498,6 +1498,8 @@ text.quote.dateformat.datepicker.selection.hint=mm/dd/yyyy
 text.quote.previous.estimated.total.display=Previous Estimated Total
 text.account.configuration.display=View Configuration
 
+checkout.pickUpDate.notSelected=please select the pickup date
+
 basket.error.storeId.empty= StoreId is null
 
 basket.error.storeId.different=StoreId is different with others.
