--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -1492,6 +1492,9 @@ text.quote.previous.estimated.total.display=之前估算总额
 text.account.configuration.display=视图配置
 
 
+checkout.pickUpDate.notSelected=请选择提货日期
+
+
 basket.error.storeId.empty= \u56fd\u5bb6\u9009\u62e9\u4e0d\u80fd\u4e3a\u7a7a
 
 basket.error.storeId.different=\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u7684\u53d1\u8d27\u56fd\u5bb6\u4e0d\u540c
