--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
@@ -26,3 +26,13 @@
 #
 # yourcustomlocalekey=value
 
+type.stocklevel.preOrder.name=\u8fdc\u671f\u5e93\u5b58\u6570\u91cf
+type.stocklevel.avaPreOrderReleaseDay.name=\u8fd1\u671f\u5e93\u5b58\u5929\u6570
+type.stocklevel.preOrderReleaseDay.name=\u8fdc\u671f\u5e93\u5b58\u5929\u6570
+type.stocklevel.preOrder.description=\u8fdc\u671f\u5e93\u5b58\u6570\u91cf
+type.stocklevel.avaPreOrderReleaseDay.description=\u8fd1\u671f\u5e93\u5b58\u5929\u6570
+type.stocklevel.preOrderReleaseDay.description=\u8fdc\u671f\u5e93\u5b58\u5929\u6570
+
+type.countryTrayFareConf.name=\u6258\u76d8\u914d\u7f6e\u8868
+type.countryTrayFareConf.trayAmount.name=\u6258\u76d8\u6570\u91cf
+
