--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -1493,6 +1493,7 @@ text.account.configuration.display=视图配置
 
 
 checkout.pickUpDate.notSelected=请选择提货日期
+checkout.creditcard.limit=\u4FE1\u7528\u989D\u5EA6\u4E0D\u8DB3
 
 
 basket.error.storeId.empty= \u56fd\u5bb6\u9009\u62e9\u4e0d\u80fd\u4e3a\u7a7a
