--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -25,3 +25,9 @@
 # type.<code of type>.<qualifier of attribute>.description=XY
 #
 # yourcustomlocalekey=value
+type.csTicket.telephone.name=Telephone
+type.csTicket.Email.name=Email
+type.csTicket.address.name=Address
+type.csTicket.productId.name=Product Code
+type.csTicket.productName.name=Product Name
+type.csTicket.yourname.name=Name
