--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
@@ -16,3 +16,4 @@
 # Example:
 # yourCustomLabel=value
 com.hybris.cockpitng.widgets.configurableflow.create.UserLevel.title=客户等级
+hmc.tab.ticket.information=详细信息
