--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -16,3 +16,4 @@
 # Example:
 # yourCustomLabel=value
 com.hybris.cockpitng.widgets.configurableflow.create.UserLevel.title=User Level
+hmc.tab.ticket.information=Information
