增加注册和密码email,以及调整表格

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
@@ -30,3 +30,5 @@ contactUs=Contact Us
 contactUsPage=http://www.hybris.com/en/contact
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
+instructionsContactUs_new=If you have any questions on ordering process, your credit limit, etc. Please come to
+registerEmailAnditFailureInfo=We are sorry to say that your registration has not been approved, please come to our customer service at {0} if you need more information.
