--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-forgottenPassword_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-forgottenPassword_en.properties
@@ -28,3 +28,5 @@ contactUs=Contact Us
 contactUsPage=http://www.hybris.com/en/contact
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
+sentenceSetPwdInstructions=Here is the link for finding re-setting your password, please click the link below
+contactUs_new=If you have any questions for us . Please come to
