--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-forgottenPassword_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-forgottenPassword_zh.properties
@@ -29,3 +29,5 @@ contactUs=联系我们
 contactUsPage=http://www.hybris.com/zh/contact
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=条款和细则
+sentenceSetPwdInstructions=这是查找重新设置密码的链接，请单击下面的链接
+contactUs_new=如果你有什么问题要问我们，请到
