--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -31,3 +31,5 @@ contactUs=联系我们
 contactUsPage=http://www.hybris.com/zh/contact
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=条款和细则
+instructionsContactUs_new=如果您对订购流程、信用额度等有任何疑问,请发送电子邮件联系
+registerEmailAnditFailureInfo=很抱歉，您的注册尚未获得批准，如果您需要更多信息，请发邮件至{0}的客户服务中心。
