--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -101,6 +101,7 @@ type.orderEntry.baseRealPrice.name=Base Real Price
 type.orderEntry.isUseFutureStock.name=Is Use Future Stock
 type.orderEntry.totalRealPrice.name=Total Real Price
 
+type.creditTransaction.name=Credit Transaction
 type.creditTransaction.creaditUsedAmount.name=Creadit Used Amount
 type.creditTransaction.creditAccount.name=Credit Account
 type.creditTransaction.isPayback.name=Is Payback
