--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
@@ -101,6 +101,7 @@ type.orderEntry.baseRealPrice.name=\u5B9E\u9645\u57FA\u51C6\u4EF7
 type.orderEntry.isUseFutureStock.name=\u4F7F\u7528\u8FDC\u671F\u5E93\u5B58
 type.orderEntry.totalRealPrice.name=\u5B9E\u9645\u603B\u4EF7
 
+type.creditTransaction.name=\u4FE1\u7528\u6D41\u6C34
 type.creditTransaction.creaditUsedAmount.name=\u4F7F\u7528\u91D1\u989D
 type.creditTransaction.creditAccount.name=\u4FE1\u7528\u8D26\u6237
 type.creditTransaction.isPayback.name=\u5DF2\u8FD8\u6B3E
