--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
@@ -68,6 +68,7 @@ type.employee.receptionist.name=\u5BF9\u63A5\u5BA2\u6237
 
 type.customer.area.name=\u533A\u57DF
 type.customer.companyType.name=\u516C\u53F8\u7C7B\u578B
+type.customer.companyName.name=\u516C\u53F8\u540D\u79F0
 type.customer.creditAccount.name=\u4FE1\u7528\u8D26\u6237
 type.customer.employee.name=\u8D1F\u8D23\u4EBA
 type.customer.employeesNo.name=\u8D1F\u8D23\u4EBA\u7F16\u53F7
