--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -68,6 +68,7 @@ type.employee.receptionist.name=Connected Customers
 
 type.customer.area.name=Area
 type.customer.companyType.name=Company Type
+type.customer.companyName.name=Company Name
 type.customer.creditAccount.name=Credit Account
 type.customer.employee.name=Connected Employee
 type.customer.employeesNo.name=Employees No
