--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -808,6 +808,7 @@ register.currency.invalid=\u8BF7\u9009\u62E9\u5E01\u79CD
 register.language.invalid=\u8BF7\u9009\u62E9\u8BED\u97F3
 register.telephone.invalid=\u8BF7\u586B\u5199\u7535\u8BDD\u53F7\u7801
 register.mobileNumber.invalid=\u8BF7\u586B\u5199\u624B\u673A\u53F7\u7801
+register.companyName.invalid=\u8BF7\u586B\u5199\u516C\u53F8\u540D\u79F0
 register.contacts.invalid=\u8BF7\u586B\u5199\u8054\u7CFB\u4EBA\u540D\u5B57
 register.fail=\u6CE8\u518C\u5931\u8D25\uFF0C\u8BF7\u91CD\u8BD5
 
