--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -815,6 +815,7 @@ register.currency.invalid					=Please select a currency
 register.language.invalid					=Please select a language
 register.telephone.invalid					=Please enter a telephone number
 register.mobileNumber.invalid				=Please enter a mobile number
+register.companyName.invalid				=Please enter a company name
 register.contacts.invalid					=Please enter a contact
 register.fail								=Registration failed, please try again
 
