--- a/acerchem/acerchemcore/resources/localization/acerchemcore-locales_zh.properties
+++ b/acerchem/acerchemcore/resources/localization/acerchemcore-locales_zh.properties
@@ -72,3 +72,6 @@ type.Gender.name=性别
 type.Gender.MALE.name=男
 type.Gender.FEMALE.name=女
 
+#shaun
+type.stocklevel.preorder.name=远期库存
+type.stocklevel.preorder.description=远期库存
