--- a/acerchem/acerchemcore/resources/localization/acerchemcore-locales_en.properties
+++ b/acerchem/acerchemcore/resources/localization/acerchemcore-locales_en.properties
@@ -70,3 +70,7 @@ type.SwatchColorEnum.ORANGE.name=Orange
 type.Gender.name=Gender
 type.Gender.MALE.name=Male
 type.Gender.FEMALE.name=Female
+
+#shaun
+type.stocklevel.preorder.name=Future Stock
+type.stocklevel.preorder.description=Future Stock
