注册信息配置语句

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
@@ -15,7 +15,7 @@ emailSubject=Customer Registration
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
-thankYouForRegistering=Thank you for registering with hybris, we hope you&rsquo;ll enjoy shopping with us.
+thankYouForRegistering=Congratulations that your registration has been completed, we are excited to see your interest and looking forward to more cooperation between us.
 registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=To start shopping please click here
 instructionsAccountUrl=To access your account please click here: {0}My Account{1}
