--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -16,7 +16,7 @@ emailSubject=客户注册
 myAccount=我的帐户
 storeFinder=店铺搜索器
 salutation=尊敬的 {0} {1}
-thankYouForRegistering=感谢您注册 hybris，祝您购物愉快！.
+thankYouForRegistering=祝贺您的注册已经完成，我们很期待您愿意有更多的合作.
 registeredEmailInfo=您注册的电子邮件地址是
 instructionsShoppingUrl=要开始购物，请单击此处
 instructionsAccountUrl=要访问您的帐户，请单击此处: {0}我的帐户{1}
