modify the message info

--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -105,7 +105,7 @@ basket.error.invalid.configuration.edit                                        =
 basket.information.merge.successful                                            = The cart saved against your user account and your current cart have been merged. Click here to visit your cart.
 basket.information.quantity.adjusted                                           = Your items have been modified to match available stock levels
 basket.information.quantity.noItemsAdded.maxOrderQuantityExceeded              = Unfortunately the quantity you chose exceeded the maximum order quantity for this product. The quantity in your cart has been reduced to the maximum order quantity.
-basket.information.quantity.noItemsAdded.noStock                               = Sorry, there is insufficient stock for your cart.
+basket.information.quantity.reducedNumberOfItemsAdded.noStock                  = Sorry, there is insufficient stock for your cart.
 basket.information.quantity.reducedNumberOfItemsAdded.lowStock                 = A lower quantity of this product has been added to your cart due to insufficient stock
 basket.information.quantity.reducedNumberOfItemsAdded.maxOrderQuantityExceeded = Unfortunately the quantity you chose exceeded the maximum order quantity for this product. The quantity in your cart has been reduced to the maximum order quantity.
 basket.items		                                                           = Items
