--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -99,7 +99,7 @@ basket.error.invalid.configuration.edit=解决问题
 basket.information.merge.successful=已将您帐户中保存的购物车和当前购物车合并。单击此处访问购物车.
 basket.information.quantity.adjusted=已根据现有库存量修改了您的商品数量
 basket.information.quantity.noItemsAdded.maxOrderQuantityExceeded=很抱歉，您选择的数量超出该产品的最大订单量。您购物车中的数量已减至最大订单量.
-basket.information.quantity.noItemsAdded.noStock=很抱歉，您购物车中的商品超出了库存数量.
+basket.information.quantity.reducedNumberOfItemsAdded.noStock=很抱歉，您购物车中的商品超出了库存数量.
 basket.information.quantity.reducedNumberOfItemsAdded.lowStock=由于库存不足，添加到购物车的该产品数量有所减少
 basket.information.quantity.reducedNumberOfItemsAdded.maxOrderQuantityExceeded=很抱歉，您选择的数量超出该产品的最大订单量。您购物车中的数量已减至最大订单量.
 basket.items		=项目
