客户注册和通过模版

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_en.properties
@@ -32,3 +32,6 @@ contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
 instructionsContactUs_new=If you have any questions on ordering process, your credit limit, etc. Please come to
 registerEmailAnditFailureInfo=We are sorry to say that your registration has not been approved, please come to our customer service at {0} if you need more information.
+registerSuccess=Thank you We appreciate your trust and interest on Ingredients4u, we are glad to inform you that your registration has been confirmed and you could feel free to shop on Ingredients4u. much for your interest in us. We will inform you of the results when we have completed the audit.
+thankYouSupport=Thank you for your support on our business.
+
