--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -33,3 +33,5 @@ contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=条款和细则
 instructionsContactUs_new=如果您对订购流程、信用额度等有任何疑问,请发送电子邮件联系
 registerEmailAnditFailureInfo=很抱歉，您的注册尚未获得批准，如果您需要更多信息，请发邮件至{0}的客户服务中心。
+registerSuccess=感谢您对Ingredients4u的信任和兴趣，我们很高兴地通知您，您的注册已经确认，您可以随时在Ingredients4u上购买。非常感谢你对我们的兴趣。我们将在完成审计后通知您结果。
+thankYouSupport=感谢您对我们业务的支持。
