各类通知管理员email

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-orderConfirmation_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-orderConfirmation_en.properties
@@ -60,3 +60,4 @@ noDelivery=No Delivery Required for this Order
 pickUpWarning=As soon as we have prepared your order you will receive another email(s) confirming shipment or advising you that your items are ready to be picked up.
 pickupFrom=Pick Up from:
 yourDeliveryItems=Items to be delivered
+orderConfirmInfo=New order has been placed, please go to review and confirm it.
