--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -111,7 +111,7 @@ type.creditTransaction.paybackAmount.name=payback Amount
 type.creditTransaction.paybackTime.name=Payback Time
 type.creditTransaction.productNumber.name=Product Quantity
 type.creditTransaction.shouldPaybackTime.name=Should Payback Time
-
+type.creditTransaction.remark.name=Should Payback Time
 
 
 
