--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_zh.properties
@@ -111,7 +111,7 @@ type.creditTransaction.paybackAmount.name=\u8FD8\u6B3E\u91D1\u989D
 type.creditTransaction.paybackTime.name=\u5B9E\u9645\u8FD8\u6B3E\u65F6\u95F4
 type.creditTransaction.productNumber.name=\u4EA7\u54C1\u6570\u91CF
 type.creditTransaction.shouldPaybackTime.name=\u5E94\u8FD8\u6B3E\u65F6\u95F4
-
+type.creditTransaction.remark.name=\u5907\u6CE8
 
 
 
