--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -309,7 +309,7 @@ checkout.error.paymentethod.formentry.sop.missing.shipTo_state                  
 checkout.error.paymentethod.formentry.sop.missing.shipTo_street1                          = Please enter a value for this field
 checkout.error.paymentethod.formentry.sop.missing.shipTo_street2                          = Please enter a value for this field
 checkout.error.tax.missing                                                                = We are sorry but your transaction could not be completed at this time; please try again later or contact customer service at 555-555-5555
-checkout.error.terms.not.accepted                                                         = Please accept our terms & conditions before submitting your order.
+checkout.error.terms.not.accepted                                                         = Please accept our Sales agreement before submitting your order.
 checkout.express.error.notAvailable                                                       = Express checkout is not available since it is disabled.
 checkout.express.error.deliveryAddress                                                    = Express checkout is not available since you do not have a default delivery address. Please set a default delivery address in your account to use Express Checkout next time.
 checkout.express.error.deliveryMode                                                       = Express checkout is not available. An error occurred setting the delivery mode.
