modified email template with populating data and changed message configuration

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -15,9 +15,9 @@
 emailSubject=客户注册
 myAccount=我的帐户
 storeFinder=店铺搜索器
-salutation=尊敬的 {0} {1}
-thankYouForRegistering=祝贺您的注册已经完成，我们很期待您愿意有更多的合作.
-registeredEmailInfo=您注册的电子邮件地址是
+salutation=Dear {0} {1}
+thankYouForRegistering=Congratulations that your registration has been completed, we are excited to see your interest and looking forward to more cooperation between us.
+registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=要开始购物，请单击此处
 instructionsAccountUrl=要访问您的帐户，请单击此处: {0}我的帐户{1}
 instructionsForgottenPswdUrl=如果忘记了密码，可以随时单击以下链接进行重置: {0}更新我的密码{1}
@@ -31,7 +31,7 @@ contactUs=联系我们
 contactUsPage=http://www.hybris.com/zh/contact
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=条款和细则
-instructionsContactUs_new=如果您对订购流程、信用额度等有任何疑问,请发送电子邮件联系
-registerEmailAnditFailureInfo=很抱歉，您的注册尚未获得批准，如果您需要更多信息，请发邮件至{0}的客户服务中心。
-registerSuccess=感谢您对Ingredients4u的信任和兴趣，我们很高兴地通知您，您的注册已经确认，您可以随时在Ingredients4u上购买。非常感谢你对我们的兴趣。我们将在完成审计后通知您结果。
-thankYouSupport=感谢您对我们业务的支持。
+instructionsContactUs_new=If you have any questions on ordering process, your credit limit, etc. Please come to
+registerEmailAnditFailureInfo=We are sorry to say that your registration has not been approved, please come to our customer service at {0} if you need more information.
+registerSuccess=Thank you We appreciate your trust and interest on Ingredients4u, we are glad to inform you that your registration has been confirmed and you could feel free to shop on Ingredients4u. much for your interest in us. We will inform you of the results when we have completed the audit.
+thankYouSupport=Thank you for your support on our business.
