customer register email

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-customerRegistration_zh.properties
@@ -35,3 +35,9 @@ instructionsContactUs_new=If you have any questions on ordering process, your cr
 registerEmailAnditFailureInfo=We are sorry to say that your registration has not been approved, please come to our customer service at {0} if you need more information.
 registerSuccess=Thank you We appreciate your trust and interest on Ingredients4u, we are glad to inform you that your registration has been confirmed and you could feel free to shop on Ingredients4u. much for your interest in us. We will inform you of the results when we have completed the audit.
 thankYouSupport=Thank you for your support on our business.
+thankYou_customerRegister=Thank you very much for your interest in us. We will inform you of the results when we have completed the audit
+contactus_customerRegister=If you have any problems during your shopping on Ingredients4fu, feel free to contact us via
+notificationAdministrator=New user has register, please go to review and confirm it.
+thankYou_customerpass=We appreciate your trust and interest on Ingredients4u, we are glad to inform you that your registration has been confirmed and you could feel free to shop on Ingredients4u.
+instructions_registerAuditFailure=We appreciate your trust and interest on Ingredients4u, we are sorry to inform you that your registration has not been passed, our customer service people will contact you shortly via email on what supporting information you will need to provide in order for us to confirm your registration.
+
