email格式显示，全部改换

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-orderConfirmation_zh.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-orderConfirmation_zh.properties
@@ -60,4 +60,4 @@ noDelivery=此订单无需送货
 pickUpWarning=我们为您的订单备好货后，会再向您发送一封电子邮件，确认发货或通知您提货事宜.
 pickupFrom=提货地点:
 yourDeliveryItems=待送货商品
-orderConfirmInfo=新订单已下，请前往查看并确认.
+orderConfirmInfo=New order has been placed, please go to review and confirm it.
