alice 1、将公司名称由Customer改为放在User，2、修改backoffice订单展示列表

--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -94,6 +94,8 @@ type.order.employeeConfirmPay.name=Employee Confirm Pay
 type.order.operateCost.name=Operate Cost
 type.order.payConfirm.name=Pay Confirm
 type.order.pickUpDate.name=Pickup Date
+type.order.user.companyName.name=Company Name
+type.order.orderFinishedDate.name=Finished Date
 type.order.storageCost.name=Storage Cost
 type.order.waitDeliveiedDate.name=Wait Deliveied Date
 
