添加标签名

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -17,3 +17,6 @@
 # yourCustomLabel=value
 com.hybris.cockpitng.widgets.configurableflow.create.UserLevel.title=User Level
 hmc.tab.ticket.information=Information
+
+hmc.msg.poe.header.productCode=Product Code
+hmc.msg.poe.header.productName=Product Name
