添加标签名

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
@@ -17,3 +17,6 @@
 # yourCustomLabel=value
 com.hybris.cockpitng.widgets.configurableflow.create.UserLevel.title=客户等级
 hmc.tab.ticket.information=详细信息
+
+hmc.msg.poe.header.productCode=产品代码
+hmc.msg.poe.header.productName=产品名称
