添加标签名

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -20,3 +20,5 @@ hmc.tab.ticket.information=Information
 
 hmc.msg.poe.header.productCode=Product Code
 hmc.msg.poe.header.productName=Product Name
+hmc.msg.poe.header.price=Unit Price
+hmc.msg.poe.header.package=Package
