--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
@@ -20,3 +20,5 @@ hmc.tab.ticket.information=详细信息
 
 hmc.msg.poe.header.productCode=产品代码
 hmc.msg.poe.header.productName=产品名称
+hmc.msg.poe.header.price=单价
+hmc.msg.poe.header.package=包装
