订单中添加备注字段到backoffice和订单详情页面

--- a/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
+++ b/acerchem/acerchembackoffice/resources/localization/acerchembackoffice-locales_en.properties
@@ -98,6 +98,7 @@ type.user.companyName.name=Company Name
 type.order.orderFinishedDate.name=Finished Date
 type.order.storageCost.name=Storage Cost
 type.order.waitDeliveiedDate.name=Wait Deliveied Date
+type.order.orderRemark.name =Order Remark
 
 type.orderEntry.availableDate.name=Available Date
 type.orderEntry.baseRealPrice.name=Base Real Price
