send quote email

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-quoteBuyerSubmission_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-quoteBuyerSubmission_en.properties
@@ -11,7 +11,7 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Quote request {0} has been received!
+emailSubject=Ingredients4u Quotation on {0}!
 
 help=Help
 contactUs=Contact Us
@@ -47,3 +47,4 @@ youSaveInTotal=YOU SAVE {0}
 
 companyName=Company Name Ltd
 year=2017
+customername={0}
