--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -507,7 +507,7 @@ checkout.summary.paymentMethod.securityCode                                     
 checkout.summary.paymentMethod.securityCode.whatIsThis                                    = (What is this?)
 checkout.summary.paymentMethod.securityCode.whatIsThis.description                        = The last 3 digits on the signature strip on the back of the card. For American Express, it's the 4 digits just above the hologram on the front of the card.
 checkout.summary.placeOrder                                                               = Place Order
-checkout.summary.placeQuote                                                               = Place Quote
+checkout.summary.placeQuote                                                               = Send Quote
 checkout.summary.placeOrder.readTermsAndConditions                                        = By placing the order, I am confirming that I have read and agree with the <a class="termsAndConditionsLink" href="{0}">Terms & Conditions</a>
 checkout.summary.placeOrder.readTermsAndConditions.close                                  = Close
 checkout.summary.placeOrder.wrongDateFormatMessage										  = Date format must be {0}.
