add send email function for quote

--- a/acerchem/acerchemcore/resources/acerchemcore/messages/email-quoteBuyerSubmission_en.properties
+++ b/acerchem/acerchemcore/resources/acerchemcore/messages/email-quoteBuyerSubmission_en.properties
@@ -11,7 +11,7 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Ingredients4u Quotation on {0}!
+emailSubject=Ingredients4u Quotation on {0}
 
 help=Help
 contactUs=Contact Us
