--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
@@ -22,3 +22,6 @@ hmc.msg.poe.header.productCode=产品代码
 hmc.msg.poe.header.productName=产品名称
 hmc.msg.poe.header.price=单价
 hmc.msg.poe.header.package=包装
+com.acerchem.actions.EmployeeconfirmPay.missCustomerConfirm=Need user confirmation to pay first
+com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Please enter the shipment batch number first.
+com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
