添加付款记录

--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_zh.properties
@@ -25,3 +25,5 @@ hmc.msg.poe.header.package=包装
 com.acerchem.actions.EmployeeconfirmPay.missCustomerConfirm=Need user confirmation to pay first
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Please enter the shipment batch number first.
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
+com.acerchem.actions.order.auditing.OrderReceiptsCredit.MissCreditPoints=Please enter the amount of credit receipts
+com.acerchem.actions.order.auditing.OrderReceiptsCredit.Success=Order Receipts Processing
