--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -892,7 +892,7 @@ search.nav.facetShowMore_price             = more prices...
 search.nav.facetShowMore_size              = more sizes...
 search.nav.facetShowMore_stores            = Show More Stores
 search.nav.facetShowMore_style             = more styles...
-search.nav.facetTitle                      = Shop by {0}
+search.nav.facetTitle                      = {0}
 search.nav.facetValueCount                 = ({0})
 search.nav.refine.button                   = Refine
 search.nav.selectRefinements.title         = Select Refinements
