IVSYSTEM-15 guansuo-不同仓库的产品添加购物车提示 IVSYSTEM-19 guansuo-购物车页面添加数量加减按钮

--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1507,4 +1507,5 @@ basket.error.storeId.empty= StoreId is null
 basket.error.storeId.different=StoreId is different with others.
 
 basket.error.product.stock.different=Stock's type is not same.
+basket.error.product.stockthreshold.different=Quantity is less than the stock threshold.
 checkout.creditcard.limit=Unfortunately there is insufficient credit limit for your account, please contact our customer service for further follow-up.
