--- a/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
+++ b/acerchem/acerchemstorefront/web/webroot/WEB-INF/messages/base_zh.properties
@@ -1502,3 +1502,5 @@ basket.error.storeId.empty= \u56fd\u5bb6\u9009\u62e9\u4e0d\u80fd\u4e3a\u7a7a
 basket.error.storeId.different=\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u7684\u53d1\u8d27\u56fd\u5bb6\u4e0d\u540c
 
 basket.error.product.stock.different=\u5f53\u524d\u5546\u54c1\u4e0e\u8d2d\u7269\u8f66\u5185\u5546\u54c1\u5e93\u5b58\u7c7b\u578b\u4e0d\u4e00\u81f4
+
+basket.error.product.stockthreshold.different=购买数量小于商品最小允许购买量
