--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -28,3 +28,6 @@ com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.MissConsignment=Plea
 com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery processing
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.MissCreditPoints=Please enter the amount of credit receipts
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.Success=Order Receipts Processing
+quote.entry.delivery.model.column.label=Shipping Method
+type.order.code.name=Code
+type.order.description.name=Remark
