--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -29,5 +29,7 @@ com.acerchem.actions.order.auditing.EmployeeconfirmDelivery.SUCCESS=Delivery pro
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.MissCreditPoints=Please enter the amount of credit receipts
 com.acerchem.actions.order.auditing.OrderReceiptsCredit.Success=Order Receipts Processing
 quote.entry.delivery.model.column.label=Shipping Method
+quote.entry.quantity.model.column.label=Quantity
+quote.entry.base.price.model.column.label=base price
 type.order.code.name=Code
 type.order.description.name=Remark
