--- a/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
+++ b/acerchem/acerchembackoffice/resources/acerchembackoffice-backoffice-labels/labels_en.properties
@@ -33,3 +33,8 @@ quote.entry.quantity.model.column.label=Quantity
 quote.entry.base.price.model.column.label=base price
 type.order.code.name=Code
 type.order.description.name=Remark
+hmc.bu1.properties=BU Midground Cost Rate
+hmc.bu2.properties=BU Capital Cost Rate
+hmc.bu3.properties=BU Midground Margin Rate
+hmc.bu4.properties=BU Custom Cost
+hmc.bu5.properties=BU Custom Duty
